Style download button

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -4,7 +4,10 @@
   <link rel="stylesheet" type="text/css" href="../css/popup.css">
 </head>
 <body>
-  <button id="download"></button>
+  <button id="download">
+    <span class="shaft"></span>
+    <span class="tip"></span>
+  </button>
   <script src="../js/popup.js"></script>
 </body>
 </html>
